--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 
-Flask==2.2.3
+Flask==2.3.3
 gunicorn==20.1.0
 Werkzeug==2.2.3
-flask-cors
-flask-socketio
-eventlet
 websocket-client
-python-socketio
 paho-mqtt==1.6.1
+Flask==2.3.3
+Flask-Cors==3.0.10
+Flask-SocketIO==5.3.2
+python-socketio==5.8.0
+eventlet==0.33.3
